Version 0.1.9 - 2007-xx-xx
	* added automatic test

Version 0.1.8 - 2007-04-22
	* reset color changing stream
	* reset color on exit

Version 0.1.7 - 2007-01-01
	* fix < /dev/null redirection
	* add --byte-limit option to classifier to stop if data is too long

Version 0.1.6 - 2006-08-13
	* small fix for HTML output
	* add --log-file option
	* support colors for more than 2 streams

Version 0.1.5 - 2006-04-15
	* support for HTML output in classifier

Version 0.1.4 - 2006-03-25
	* added classifier utility
	
Version 0.1.3 - 2006-03-11
	* better support for SIGCHLD
	* support multiple parameters
	* read all data even after SIGCHLD

Version 0.1.2 - 2004-11-03
	* pass child code exit to allow scripting
	* SIGCHLD handled
	* fix compatibility for debian and SunOS4

Version 0.1.1 - 2004-10-28
	* fixes for closed connection
	* Solaris portability
