@@ -1,15 +1,15 @@
 #!/bin/sh
 
-# $Id: test.sh,v 1.1 2007-05-02 09:25:25 freddy Exp $
+# $Id: test.sh,v 1.2 2007-05-02 14:09:44 freddy Exp $
 
 # shtunnel --debug --shell ls xxx < /dev/null
 #  should work and not stall
 OUT=`./shtunnel --debug --shell ls shtunnel < /dev/null 2> /dev/null | if read -t 2 XXX; then
 	echo -n $XXX | cat -ve
 fi`
-EXP='shtunnel^M'
+EXP='shtunnel'
 if test "$OUT" != "$EXP"; then
-	echo "Wrong result '$OUT' expected '$EXP'" >&2
+	echo "$LINENO: Wrong result '$OUT' expected '$EXP'" >&2
 	exit 1
 fi
 
@@ -17,7 +17,7 @@ fi
 OUT=`./classifier --color sh -c 'echo -n ciao >&2; echo pippo' | cat -ve`
 EXP='^[[00;31mciao^[[00mpippo$'
 if test "$OUT" != "$EXP"; then
-	echo "Wrong result '$OUT' expected '$EXP'" >&2
+	echo "$LINENO: Wrong result '$OUT' expected '$EXP'" >&2
 	exit 1
 fi
 
@@ -26,7 +26,7 @@ OUT=`./classifier --color sh -c 'echo -n ciao >&2' | cat -ve`
 rm log.txt
 EXP='^[[00;31mciao^[[00m'
 if test "$OUT" != "$EXP"; then
-	echo "Wrong result '$OUT' expected '$EXP'" >&2
+	echo "$LINENO: Wrong result '$OUT' expected '$EXP'" >&2
 	exit 1
 fi
 
